fix video player overflows

--- a/common/app/components/subtitles.css
+++ b/common/app/components/subtitles.css
@@ -1,3 +1,18 @@
+html,
+body {
+    height: 100%;
+    overflow: hidden;
+}
+
+body {
+    margin: 0;
+}
+
+#root {
+    height: 100%;
+    overflow: hidden;
+}
+
 .asbplayer-offscreen {
     position: fixed !important;
     left: 100% !important;
